# Rust

./: Cargo.toml
error_management_unit/alternative_option_solution/: Cargo.toml
error_management_unit/alternative_option_solution/src/: main.rs
error_management_unit/option_exercise/: Cargo.toml
error_management_unit/option_exercise/src/: main.rs
error_management_unit/result_exercise/: Cargo.toml
error_management_unit/result_exercise/src/: main.rs
generic_types_and_traits/exercise_1_generic_type/src/: main.rs
generic_types_and_traits/exercise_2_iterator/: Cargo.toml
generic_types_and_traits/exercise_2_iterator/src/: main.rs
loops_unit/loops/src/: main.rs
loops_unit/loops_ex/: Cargo.toml
memory_management_unit/exercise/src/: main.rs
memory_management_unit/try_thing/: Cargo.toml
memory_management_unit/try_thing/src/: main.rs
memory_management_unit/try_thing_2/: Cargo.toml
memory_management_unit/try_thing_2/src/: main.rs
memory_management_unit/try_thing_3/: Cargo.toml
modules_packages_containers/ex_1_visibility/: Cargo.toml
modules_packages_containers/ex_2_modules/: Cargo.toml
rusty-journal/: test-journal.json
rusty-journal/src/: main.rs  tasks.rs
src/: cli.rs
unit_int_and_document_tests/doc_test/src/: lib.rs
unit_int_and_document_tests/doc_test_example/: Cargo.toml
unit_int_and_document_tests/doc_test_example/src/: lib.rs
unit_int_and_document_tests/int_test/: Cargo.toml
unit_int_and_document_tests/int_test/tests/: pizzas.rs
