[package]
name = "rusty-journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
structopt = "0.3"
serde_json = "1.0"
anyhow = "1.0"

[dependencies.chrono]
features = ["serde"] # In order to serialize the DateTime field, we need the serde feature for the chrono crate.
version = "0.4"

[dependencies.serde]
features = ["derive"] # We need the derive feature
version = "1.0"